refactor(docs): reorganize and enhance documentation structure with new sections and updated titles
This commit introduces several key changes to the documentation, including:

1. Added new sections for "参与开发" (Development Participation) and "学习资料" (Learning Materials) to provide contributors and learners with essential resources and guidelines.
2. Updated titles across various documents for clarity, such as changing "K8S-部署应用" to "Kubernetes 部署指南" and "Linux 生产部署应用" to "Linux 生产环境部署".
3. Embedded video tutorials in multiple sections to improve accessibility and user engagement.
4. Reorganized existing content to streamline navigation and enhance the overall user experience.

These updates aim to foster community involvement and provide clearer guidance for users of the Pig4Cloud platform.

--- a/docs/deployment/version-branch.mdx
+++ b/docs/deployment/version-branch.mdx
@@ -1,5 +1,7 @@
 ---
-title: "说明 - 版本分支"
+title: "版本分支说明"
+icon: "code-branch"
+iconType: "solid"
 ---
 
 在进行新项目的技术选型时，推荐 Java17 + SpringBoot3 + Vue3 的技术栈。
