--- a/docs/dev/microservice-config-management.mdx
+++ b/docs/dev/microservice-config-management.mdx
@@ -1,5 +1,7 @@
 ---
-title: "微服务配置管理"
+title: "微服务配置文件管理"
+icon: "gear"
+iconType: "solid"
 ---
 
 ## Nacos 配置管理
@@ -13,7 +15,7 @@ title: "微服务配置管理"
 2. 配置类型 必须选择 yaml
 </Warning>
 
-![](/images/1599233245468-0fb3e17c-e58f-47b9-a443-42eb7b8ef928.png)
+![Nacos配置界面](/images/1599233245468-0fb3e17c-e58f-47b9-a443-42eb7b8ef928.png)
 
 将 **完成微服务增删改查章节** 新增的配置 **剪切**到配置中心即可
 
@@ -33,5 +35,5 @@ spring:
 
 ## 问题咨询
 
-![](/images/1662563973685-c22e9831-db66-42b5-973f-886d25d1e0e7.gif)
+![问题咨询](/images/1662563973685-c22e9831-db66-42b5-973f-886d25d1e0e7.gif)
 
