--- a/docs/dev/monolith-secondary-dev.mdx
+++ b/docs/dev/monolith-secondary-dev.mdx
@@ -1,5 +1,7 @@
 ---
 title: "进阶 单体版二次开发"
+icon: "code"
+iconType: "solid"
 ---
 
 <Card title="视频教程" icon="video" href="https://player.bilibili.com/player.html?bvid=BV12t411B7e9&p=3&page=3&autoplay=0">
