--- a/docs/preface/development-participation.mdx
+++ b/docs/preface/development-participation.mdx
@@ -1,5 +1,7 @@
 ---
 title: "参与开发"
+icon: "git"
+iconType: "solid"
 ---
 
 ## 参与贡献，反馈社区
@@ -9,20 +11,21 @@ title: "参与开发"
 当然代码不是唯一贡献方式。我们非常重视文档、与其他项目的集成，并欣然接受这些方面的改进。
 
 ## 贡献福利
-#### 1. Gitee 获取 GVP 项目标识
+
+### 1. Gitee 获取 GVP 项目标识
 ![](/images/1625898688116-a5fc16a7-7181-4234-8e61-40d9dcda9dc3.png)
 
-#### 2. pig 贡献者列表会出现您的 ID
+### 2. pig 贡献者列表会出现您的 ID
 ![](/images/1625898761016-c616723d-fdeb-4ef8-9854-83f8da19943b.png)
 
-#### 3. 优秀贡献者奖励定制周边福利
+### 3. 优秀贡献者奖励定制周边福利
 <Note>
 如下图为第一期发放给贡献者的**定制水杯**
 </Note>
 
 ![](/images/1627972504246-8b82f0f4-43aa-42cd-9789-9db29acb8d8b.png)![](/images/1627972520920-7427ce21-61ee-4f49-9a1c-f26227c29166.png)
 
-#### 4. 定期线下面基福利，冷冷请客（北京）
+### 4. 定期线下面基福利，冷冷请客（北京）
 <Note>
 核心贡献者线下**约码**交流
 </Note>
@@ -31,7 +34,7 @@ title: "参与开发"
 
 ## 如何贡献
 
-#### 1. fork 代码到您的仓库
+### 1. fork 代码到您的仓库
 
 浏览器访问：[https://gitee.com/log4j/pig](https://gitee.com/log4j/pig)
 
@@ -39,7 +42,7 @@ title: "参与开发"
 
 ![](/images/1604289479767-5b2a63af-247d-49e0-b17b-d1898ff5ed02.jpeg)
 
-#### 2. clone 您仓库中的 pig 到本地
+### 2. clone 您仓库中的 pig 到本地
 
 ```shell
 git clone https://gitee.com/{您的用户名}/pig.git
@@ -47,9 +50,9 @@ git clone https://gitee.com/{您的用户名}/pig.git
 
 ![](/images/1604289468858-e0c47103-4a6a-4b05-a97b-57eb86880d66.jpeg)
 
-#### 3. 修改代码并提交
+### 3. 修改代码并提交
 
-#### 4. 提交 pull request 至我们 DEV 分支
+### 4. 提交 pull request 至我们 DEV 分支
 
 ![](/images/1604289390693-e0b22e84-49e0-4c08-a584-b94225abf918.jpeg)
 
