--- a/docs/preface/learning-materials.mdx
+++ b/docs/preface/learning-materials.mdx
@@ -1,14 +1,16 @@
 ---
 title: "学习资料"
+icon: "book-open"
+iconType: "solid"
 ---
 
-## 资料最新更新日期：20250412
+## 资料最新更新日期：2025-04-12
 
 在信息爆炸的时代，海量的学习资源让人眼花缭乱，往往只是【收藏、保存、退出】的三连操作。
 
 为了帮助新手少走弯路，冷冷作为 Spring Core Committer，**精心挑选并整理了最核心的微服务技术栈资源，确保大家能高效地找到最适合的学习路径**。
 
-![](/images/1733977094903-fa1c8a38-ace3-43b0-bad9-f92dce97b191.png)
+![学习资料概览](/images/1733977094903-fa1c8a38-ace3-43b0-bad9-f92dce97b191.png)
 
 ### 版权声明
 以下资源均为来自**GitHub**、**B 站**和个人录制的免费资料。请尊重作者的劳动成果，支持开源项目，拒绝白嫖！
@@ -17,10 +19,12 @@ title: "学习资料"
 **关注并 Star Pig 项目，即可自动获取丰富的微服务相关资源。** [**👉🏻 自动获取地址**](https://pay.pig4cloud.com/exchange)
 </Warning>
 
-- **GitHub 项目地址**：[https://github.com/pig-mesh/pig](https://github.com/pig-mesh/pig)
-- **Gitee 项目地址**：[https://gitee.com/log4j/pig](https://gitee.com/log4j/pig)
+<Card title="项目地址" icon="github">
+  - **GitHub**: [https://github.com/pig-mesh/pig](https://github.com/pig-mesh/pig)
+  - **Gitee**: [https://gitee.com/log4j/pig](https://gitee.com/log4j/pig)
+</Card>
 
-[**👉🏻 自动获取地址**](https://pay.pig4cloud.com/exchange)
-
-[微服务资源获取](https://pay.pig4cloud.com/exchange)
+<Card title="资源获取" icon="link" href="https://pay.pig4cloud.com/exchange">
+  点击获取微服务学习资源
+</Card>
 
