--- a/docs/deployment/k8s-deploy.mdx
+++ b/docs/deployment/k8s-deploy.mdx
@@ -1,12 +1,14 @@
 ---
-title: "KubeSphere 图形化部署"
+title: "Kubernetes 部署指南"
+icon: "docker"
+iconType: "solid"
 ---
 
 <iframe
   width="100%"
   height="500"
   src="https://player.bilibili.com/player.html?bvid=BV12t411B7e9&p=38&page=38"
-  title="Bilibili video player - K8S部署教程"
+  title="Kubernetes 部署教程"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen
