--- a/docs/dev/create-microservice-skeleton.mdx
+++ b/docs/dev/create-microservice-skeleton.mdx
@@ -1,8 +1,18 @@
 ---
 title: "创建微服务项目骨架"
+icon: "microchip"
+iconType: "solid"
 ---
 
-[bilibili](https://player.bilibili.com/player.html?bvid=BV12t411B7e9&p=3&page=3&autoplay=0)
+<iframe
+  width="100%"
+  height="500"
+  src="https://player.bilibili.com/player.html?bvid=BV12t411B7e9&p=3&page=3&autoplay=0"
+  title="Bilibili video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
 
 ### 1. 编译原有 pig 项目
 
