refactor(docs): update monolith secondary development guide and enhance frontend documentation
This commit includes several updates to the documentation:

1. Renamed the "进阶 单体版二次开发" section to "单体版二次开发指南" and updated the icon for better representation.
2. Replaced video links with embedded `<iframe>` players for improved accessibility in the monolith secondary development guide.
3. Enhanced the frontend data state management documentation by adding a clearer section for Pinia state management.
4. Simplified the floating input component documentation by removing unnecessary card wrappers around the component preview image.

These changes aim to improve clarity, accessibility, and overall user experience in the documentation.

--- a/docs/frontend/data-state-management.mdx
+++ b/docs/frontend/data-state-management.mdx
@@ -5,17 +5,15 @@ title: "前端数据状态管理"
 <Note>
 框架中数据状态使用 vuex Module 模块化进行管理，您可能需要了解 [vuex 核心概念 Module](https://next.vuex.vuejs.org/zh/guide/modules)
 </Note>
-
-## Pinia 状态管理
-
-<Card title="代码位置" icon="code">
-  `/src/stores`
-</Card>
-
 <Card title="相关文档" icon="link">
   - [Pinia 官网](https://pinia.vuejs.org/)
   - [Vuex 3.x 官网](https://v3.vuex.vuejs.org/zh/)
 </Card>
+
+## Pinia 状态管理
+
+代码： `/src/stores`
+
 
 ## 全局引入
 
