refactor(docs): update preface and deployment documentation for clarity and consistency
This commit includes several changes to enhance the documentation:

1. Updated the badge theme for Gitee links in the preface section to improve visual consistency.
2. Changed `<Note>` tags to `<Tip>` for better semantic meaning in the preface.
3. Removed the video tutorial section from the monolith usage and quick start guides, streamlining the content.
4. Clarified SQL script references in the deployment documentation to specify their location in the backend code.
5. Updated node version requirements in the monolith usage guide for accuracy.

These changes aim to improve clarity, consistency, and overall user experience in the documentation.

--- a/docs/deployment/monolith-usage.mdx
+++ b/docs/deployment/monolith-usage.mdx
@@ -36,7 +36,7 @@ git clone https://gitee.com/log4j/pig.git -b jdk17
 ```
 
 ### ② 执行 SQL 脚本
-```shell
+```sql SQL脚本在后端代码 db/*.sql
 pig
 ├── db
 │   ├── pig.sql
@@ -79,7 +79,7 @@ git clone https://gitee.com/log4j/pig-ui.git -b master
 </Note>
 
 ```shell
-# node 版本需要 16/18
+# node 版本需要 18
 node -v  
 
 # 安装依赖
@@ -112,8 +112,6 @@ npm run dev
 
 - swagger-ui: [http://127.0.0.1:9999/admin/swagger-ui.html](http://127.0.0.1:9999/admin/swagger-ui.html) 
 - knife4j: [http://127.0.0.1:9999/admin/doc.html](http://127.0.0.1:9999/admin/doc.html)
-
-调试参数参考文档： [https://www.yuque.com/pig4cloud/pig/bmgpca](https://www.yuque.com/pig4cloud/pig/bmgpca)
 </Note>
 
 ![](/images/1700527095040-b7284663-db53-4c11-a0c2-7b59c1cd2a08.png)
