--- a/docs/preface.mdx
+++ b/docs/preface.mdx
@@ -8,24 +8,22 @@ iconType: "solid"
   <tr>
     <td>
       <a href="https://gitee.com/log4j/pig">
-        <img src="https://gitee.com/log4j/pig/badge/star.svg?theme=dark" alt="Gitee Stars" />
+        <img src="https://gitee.com/log4j/pig/badge/star.svg?theme=gvp" alt="Gitee Stars" />
       </a>
     </td>
     <td>
       <a href="https://gitee.com/log4j/pig">
-        <img src="https://gitee.com/log4j/pig/badge/fork.svg?theme=dark" alt="Gitee Forks" />
+        <img src="https://gitee.com/log4j/pig/badge/fork.svg?theme=gvp" alt="Gitee Forks" />
       </a>
     </td>
   </tr>
 </table>
 
-<Note>
+<Tip>
 本文档内容由 pig4cloud 团队整理完成，转载请联系我们。文档内容持续更新，[问题反馈](http://issue.pig4cloud.com)。
-</Note>
 
-<Warning>
 **商业用户注意**：本文档内容不适配 PIG 商业产品，[商业版文档](https://pig4cloud.com/data/doc/pigx/) 请单独获取。
-</Warning>
+</Tip>
 
 ### 产品优势
 
@@ -60,17 +58,6 @@ iconType: "solid"
     | Github | [https://github.com/pig-mesh/pig-ui](https://github.com/pig-mesh/pig-ui) |
   </Tab>
 </Tabs>
-
-### 视频教程
-<iframe
-  width="100%"
-  height="500"
-  src="https://player.bilibili.com/player.html?bvid=BV12t411B7e9"
-  title="Bilibili 视频播放器"
-  frameborder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
-></iframe>
 
 ### 加入社群
 ![广告党太多，无备注不通过](/images/1728703600955-45cedb6b-0f2a-4949-ac17-a51239a503c3.png)
