refactor(docs): update links and remove outdated content in various documentation files
This commit includes several updates to improve the documentation:

1. Updated Postman and Apifox script references to point to the new wiki links for better accessibility.
2. Removed outdated technical support card from the Postman API usage documentation.
3. Updated the OAuth2 token generation link in the client info modification guide for accuracy.
4. Revised the CentOS deployment reference in the HTTPS frontend deployment documentation to the new wiki link.

These changes aim to enhance clarity and ensure users have access to the most current resources.

--- a/docs/backend/auth-authorization/pig-authorization-code.mdx
+++ b/docs/backend/auth-authorization/pig-authorization-code.mdx
@@ -45,7 +45,7 @@ http://localhost:3000/oauth2/authorize?scope=server&client_id=test&response_type
 ## 通过授权码获取交互令牌
 
 <Warning>
-参考 Postman 调用章节导入脚本：[https://www.yuque.com/pig4cloud/pig/dzlb0v](https://www.yuque.com/pig4cloud/pig/dzlb0v)
+参考 Postman 调用章节导入脚本：[https://wiki.pig4cloud.com/docs/backend/function-usage/postman-api-usage#postman-api](https://wiki.pig4cloud.com/docs/backend/function-usage/postman-api-usage#postman-api)
 </Warning>
 
 ![获取令牌](/images/1661931726658-9d90fc59-3940-40e6-b1a4-8d06aab842f4.png)
