--- a/docs/backend/auth-authorization/pig-client-mode.mdx
+++ b/docs/backend/auth-authorization/pig-client-mode.mdx
@@ -25,7 +25,7 @@ v3.8+ 版本需要设置客户端跳过验证码
 
 ![客户端配置](/images/1729387271907-4150125f-39b2-49f4-bbd2-77e7492c82d2.png)
 
-### 参考 [apifox 调用服务接口](https://www.yuque.com/pig4cloud/pig/dzlb0v) 导入 apifox 脚本直接调试即可
+### 参考 [apifox 调用服务接口](https://wiki.pig4cloud.com/docs/backend/function-usage/postman-api-usage#postman-api) 导入 apifox 脚本直接调试即可
 
 ![API调用](/images/1663141370963-89a9a223-e227-49c6-8b3b-6f3353e57931.png)
 
