--- a/docs/faq/client-settings/modify-client-info.mdx
+++ b/docs/faq/client-settings/modify-client-info.mdx
@@ -7,7 +7,7 @@ title: "如何修改客户端 pig 信息"
 ## 一、背景
 
 1. 部分用户在终端管理修改或者删除 pig 客户端导致前端无法登录
-2. 修改此处数据请了解 oauth2 的认证授权原理 > [pig 生成 token (认证) 详解 ⭐️](https://www.yuque.com/pig4cloud/pig/dqnyuc)
+2. 修改此处数据请了解 oauth2 的认证授权原理 > [pig 生成 token (认证) 详解 ⭐️](https://wiki.pig4cloud.com/docs/backend/auth-authorization/pig-token-authentication)
 
 ## 二、操作步骤
 
