--- a/docs/production/https-frontend-deployment.mdx
+++ b/docs/production/https-frontend-deployment.mdx
@@ -4,7 +4,7 @@ title: "HTTPS 证书配置和使用教程"
 
 
 <Note>
-本文档仅提供 HTTPS 前端和 Nginx 部署相关配置。CentOS 部署请参考 [pig4cloud 部署文档](https://www.yuque.com/pig4cloud/pig/ggffp7)
+本文档仅提供 HTTPS 前端和 Nginx 部署相关配置。CentOS 部署请参考 [pig4cloud 部署文档](https://wiki.pig4cloud.com/docs/deployment/linux-deploy)
 </Note>
 
 <Warning>
