--- a/docs/integration/pig-register-nacos-oracle.mdx
+++ b/docs/integration/pig-register-nacos-oracle.mdx
@@ -1,10 +1,17 @@
 ---
-title: "pig register nacos 支持 oracle 存储"
+title: "Nacos Oracle 注册中心集成指南"
+icon: "database"
 ---
 
-<Card title="视频教程" icon="video" href="https://player.bilibili.com/player.html?bvid=BV1sM411h7t8">
-  点击观看视频教程
-</Card>
+<iframe
+  width="100%"
+  height="500"
+  src="https://player.bilibili.com/player.html?bvid=BV1sM411h7t8"
+  title="Nacos Oracle 注册中心集成视频教程"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
 
 Nacos 从 2.2.0 版本开始，可通过 SPI 机制注入多数据源实现插件，并在引入对应数据源实现后，便可在 Nacos 启动时通过读取 application.properties 配置文件中 spring.datasource.platform 配置项选择加载对应多数据源插件。
 
