--- a/docs/integration/pig-rocketmq-integration.mdx
+++ b/docs/integration/pig-rocketmq-integration.mdx
@@ -1,10 +1,17 @@
 ---
-title: "pig 整合 RocketMQ 消息队列"
+title: "RocketMQ 集成指南"
+icon: "message-square"
 ---
 
-<Card title="视频教程" icon="video" href="https://player.bilibili.com/player.html?bvid=BV12t411B7e9&p=13&page=13">
-  点击观看视频教程
-</Card>
+<iframe
+  width="100%"
+  height="500"
+  src="https://player.bilibili.com/player.html?bvid=BV12t411B7e9&p=13&page=13"
+  title="RocketMQ 集成视频教程"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
 
 ## 安装 RocketMQ
 
