--- a/docs/backend/function-usage/swagger-api-debugging.mdx
+++ b/docs/backend/function-usage/swagger-api-debugging.mdx
@@ -6,17 +6,19 @@ title: "swagger 接口文档调试"
 
 ## 立即使用
 
-
 #### 1. 访问 swagger-ui 页面
-```shell
+
+<CodeGroup>
+
+```bash 微服务版本
 http://127.0.0.1:9999/swagger-ui.html
 ```
 
-```shell
+```bash 单体版本
 http://127.0.0.1:9999/admin/swagger-ui.html
 ```
 
-
+</CodeGroup>
 
 #### 2. 模拟登陆
 
