--- a/docs/dev/microservice-config-management.mdx
+++ b/docs/dev/microservice-config-management.mdx
@@ -1,12 +1,12 @@
 ---
-title: "微服务配置文件管理"
+title: "微服务配置中心管理指南"
 icon: "gear"
 iconType: "solid"
 ---
 
 ## Nacos 配置管理
 
-访问 `http://pig-register:8848/nacos`
+访问 Nacos 控制台地址：`http://pig-register:8848/nacos`
 
 ## 新增配置文件
 
@@ -35,5 +35,7 @@ spring:
 
 ## 问题咨询
 
-![问题咨询](/images/1662563973685-c22e9831-db66-42b5-973f-886d25d1e0e7.gif)
+<Card title="问题咨询" icon="help-circle">
+  ![问题咨询](/images/1662563973685-c22e9831-db66-42b5-973f-886d25d1e0e7.gif)
+</Card>
 
