--- a/docs/dev/monolith-secondary-dev.mdx
+++ b/docs/dev/monolith-secondary-dev.mdx
@@ -3,17 +3,17 @@ title: "单体版二次开发指南"
 icon: "rectangle-code"
 ---
 
-  <iframe
-    width="100%"
-    height="500"
-    src="https://player.bilibili.com/player.html?bvid=BV12t411B7e9&p=3&page=3&autoplay=0"
-    title="Bilibili video player"
-    frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-    allowfullscreen
-  ></iframe>
+<iframe
+  width="100%"
+  height="500"
+  src="https://player.bilibili.com/player.html?bvid=BV12t411B7e9&p=3&page=3&autoplay=0"
+  title="Bilibili video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
   
-## 一、创建测试表
+## 1. 创建测试表
 
 ```sql
 -- 创建测试库
@@ -33,60 +33,50 @@ CREATE TABLE `demo` (
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_bin ROW_FORMAT=DYNAMIC COMMENT='demo 表';
 ```
 
-## 二、代码生成
+## 2. 代码生成
 
 <Warning>
-需要启动 pig-boot、pig-ui 服务
+  需要启动 pig-boot、pig-ui 服务
 </Warning>
 
 ### 2.1 数据源新增
 
-```yaml
+```bash
 jdbc:mysql://pig-mysql:3306/pig?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&allowMultiQueries=true&allowPublicKeyRetrieval=true
 ```
 
-<Card title="数据源配置" icon="database">
   ![数据源配置](https://minio.pigx.top/oss/202307/1688311202.png)
-</Card>
 
 ### 2.2 选择目标表
 
-<Card title="选择目标表" icon="table">
   ![选择目标表](/images/1724736747002-9fd05a31-65a8-4185-9f6c-4245d0adec31.png)
-</Card>
 
 ### 2.3 生成代码配置
 
 <Warning>
-选择数据源生成代码时，请注意包名称和模块名称。
+  选择数据源生成代码时，请注意包名称和模块名称。
 </Warning>
 
 <Note>
-1. 对应 Maven module 名称 **admin**（固定值）
-2. 对应新增服务端 upms-biz 模块的路径（代码放在 upms-biz 目录）
-3. 对应前端 UI 的路径
+  1. 对应 Maven module 名称 **admin**（固定值）
+  2. 对应新增服务端 upms-biz 模块的路径（代码放在 upms-biz 目录）
+  3. 对应前端 UI 的路径
 </Note>
 
-<Card title="生成代码配置" icon="settings">
   ![生成代码配置](/images/1724736679009-e218956c-ef8e-40ae-92eb-22643515ce6e.png)
-</Card>
 
 ### 2.4 执行 SQL 脚本
 
 <Warning>
-执行代码生成包（2.2 中的 demo_menu.sql）中的 SQL 脚本（在 upms-biz/menu 目录）。
+  执行代码生成包（2.2 中的 demo_menu.sql）中的 SQL 脚本（在 upms-biz/menu 目录）。
 </Warning>
 
-<Card title="执行SQL脚本" icon="file-code">
   ![执行SQL脚本](/images/1724736815336-8dce895a-0b62-43e2-9d3c-795c261ee132.png)
-</Card>
 
 ### 2.5 角色分配权限
 
 <Note>
-最重要的一步：给角色分配权限（角色管理 > 权限）。在重新启动前端并重新登录后，请强制刷新浏览器，查看 demo 功能是否生效。
+  最重要的一步：给角色分配权限（角色管理 > 权限）。在重新启动前端并重新登录后，请强制刷新浏览器，查看 demo 功能是否生效。
 </Note>
 
-<Card title="角色权限分配" icon="shield">
   ![角色权限分配](/images/1704604236898-e653151a-94fb-4194-a63c-cfc7af5a6227.png)
-</Card>
