refactor(docs): update download links and enhance environment preparation section in documentation
This commit updates the download links for Apifox script files in the Postman API usage documentation to new sources. Additionally, it enhances the environment preparation section in the quick start guide by adding a batch download link for software and restructuring the tools table for clarity, including version support notes. These changes aim to improve accessibility and user experience in the documentation.

--- a/docs/deployment/quick-start.mdx
+++ b/docs/deployment/quick-start.mdx
@@ -18,14 +18,21 @@ iconType: "solid"
 </Warning>
 
 ## 环境准备
-| 工具 | 版本 | 下载 | 备注 |
-| --- | --- | --- | --- |
-| JDK | 17 | [jdk17.0.8-win_x64.msi](https://cdn.azul.com/zulu/bin/zulu17.44.15-ca-jdk17.0.8-win_x64.msi) | 根据分支自行选择 |
-| Maven | 3.8+ | [apache-maven-3.9.4-bin.zip](https://dlcdn.apache.org/maven/maven-3/3.9.4/binaries/apache-maven-3.9.4-bin.zip) | |
-| MySQL | 5.7.8 + | [mysql-installer-community-8.0.18.0.msi.zip](https://www.yuque.com/attachments/yuque/0/2023/zip/283679/1688793202906-bc1535d0-e330-4b5c-a16b-bbef94a1b59a.zip) | 强制要求 |
-| Redis | 7+ | [redis-windows-7.4.2.zip](https://www.yuque.com/attachments/yuque/0/2025/zip/283679/1741774624160-9d8d46df-e0f1-40d5-af31-127d43a2c953.zip) | |
-| Node.js | 18 | [node-v18.20.3-x64.msi.zip](https://www.yuque.com/attachments/yuque/0/2024/zip/283679/1720584223073-e682aad2-1971-43d4-a22e-74484f638562.zip) | 强制要求 |
-| 开发工具 | IDEA 2023+ | [dev-tools.zip](https://www.yuque.com/attachments/yuque/0/2023/zip/283679/1688793203179-32a2dcff-da73-4642-a009-28fb0623687a.zip) | 非必须 |
+
+<Tip>
+[pig4cloud 基础环境软件百度网盘批量下载 「提取密码 8888」](https://pan.baidu.com/s/12pgv8iVr82RHd9IN8p6YBQ?pwd=8888)
+</Tip>
+
+
+| 工具 | 版本 | 备注 |
+| --- | --- | --- |
+| JDK | 17 | 支持JDK21 |
+| Maven | 3.8+ | |
+| MySQL | 5.7.8 + | 强制要求 |
+| Redis | 7+ | |
+| Node.js | 18 | 强制要求 |
+| 开发工具 | IDEA 2023+ | 非必须 |
+
 
 ## 项目部署步骤
 
