feat(docs): add hit counter image to preface documentation
This commit introduces a hit counter image in the preface section of the documentation, providing a visual representation of user engagement. This addition aims to enhance the overall documentation experience by showcasing usage metrics.

--- a/docs/preface.mdx
+++ b/docs/preface.mdx
@@ -16,6 +16,9 @@ iconType: "solid"
         <img src="https://gitee.com/log4j/pig/badge/fork.svg?theme=gvp" alt="Gitee Forks" />
       </a>
     </td>
+        <td>
+      <img alt="Hits" src="https://hits.sh/wiki.pig4cloud.com/docs/preface.svg?view=today-total"/>
+    </td>
   </tr>
 </table>
 
