feat(docs): enhance documentation with new content and formatting updates
This commit introduces several improvements to the documentation, including the addition of new sections for Docker deployment and microservice CRUD operations. It also updates existing titles and formatting for consistency, enhances image captions, and corrects minor typographical errors. Additionally, a new file for token authorization has been added, expanding the coverage of authentication processes. These changes aim to improve clarity and usability for users navigating the documentation.

--- a/docs/backend/auth-authorization/pig-token-authentication.mdx
+++ b/docs/backend/auth-authorization/pig-token-authentication.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Token 生成认证详解"
+title: "Token 生成认证详解👍"
 ---
 
 ![认证流程](/images/1655009689863-67ed08c2-cf22-449a-9d75-fc6831c17e8c.png)
@@ -142,11 +142,11 @@ return new UserDetails(user.getUsername(),"{bcrypt}"+"数据库存储的密文")
 
 ## 生成 OAuth2AccessToken
 
-![Token生成](https://cdn.nlark.com/yuque/0/2022/png/283679/1655011218322-a85228ac-a530-4572-9d07-b6585abfb528.png)
+![Token 生成](https://cdn.nlark.com/yuque/0/2022/png/283679/1655011218322-a85228ac-a530-4572-9d07-b6585abfb528.png)
 
 ## Token 存储持久化
 
-![Token存储](https://cdn.nlark.com/yuque/0/2022/png/283679/1655011284442-089a170b-ed3f-439e-9f9e-215009094fd8.png)
+![Token 存储](https://cdn.nlark.com/yuque/0/2022/png/283679/1655011284442-089a170b-ed3f-439e-9f9e-215009094fd8.png)
 
 <Warning>
 当前 SAS 仅支持 JDBC 和内存，PIG 扩展支持 Redis 实现
