--- a/docs/dev/create-microservice-skeleton.mdx
+++ b/docs/dev/create-microservice-skeleton.mdx
@@ -1,5 +1,5 @@
 ---
-title: "创建微服务项目骨架"
+title: "1.创建微服务项目骨架"
 icon: "microchip"
 iconType: "solid"
 ---
@@ -48,13 +48,13 @@ mvn clean install
 
 <Tabs>
   <Tab title="检查编译">
-    **编译验证：** 确认已完成PIG微服务项目的整体编译（执行过`mvn clean install`）
+    **编译验证：** 确认已完成 PIG 微服务项目的整体编译（执行过`mvn clean install`）
   </Tab>
   <Tab title="检查版本">
-    **版本一致性：** 核对新建项目与PIG主工程的版本号（查看pom.xml中parent版本号）
+    **版本一致性：** 核对新建项目与 PIG 主工程的版本号（查看 pom.xml 中 parent 版本号）
   </Tab>
   <Tab title="检查 Maven 设置">
-    **配置验证：** 验证IDEA中Maven配置指向正确的本地仓库及远程仓库（File > Settings > Build Tools > Maven）
+    **配置验证：** 验证 IDEA 中 Maven 配置指向正确的本地仓库及远程仓库（File > Settings > Build Tools > Maven）
   </Tab>
 </Tabs>
 
