--- a/docs/integration/pig-skywalking-integration.mdx
+++ b/docs/integration/pig-skywalking-integration.mdx
@@ -12,7 +12,7 @@ SkyWalking 个人建议直接下载官方编译好的，[下载地址](http://sk
 sudo bin/startup.sh
 ```
 
-访问地址: http://ip:8080
+访问地址：http://ip:8080
 
 ## 关闭 SkyWalking
 
