--- a/docs/dev/microservice-config-management.mdx
+++ b/docs/dev/microservice-config-management.mdx
@@ -1,5 +1,5 @@
 ---
-title: "微服务配置中心管理指南"
+title: "3.微服务配置集中管理"
 icon: "gear"
 iconType: "solid"
 ---
@@ -15,7 +15,7 @@ iconType: "solid"
 2. 配置类型 必须选择 yaml
 </Warning>
 
-![Nacos配置界面](/images/1599233245468-0fb3e17c-e58f-47b9-a443-42eb7b8ef928.png)
+![Nacos 配置界面](/images/1599233245468-0fb3e17c-e58f-47b9-a443-42eb7b8ef928.png)
 
 将 **完成微服务增删改查章节** 新增的配置 **剪切**到配置中心即可
 
