chore(docs): standardize titles in integration documentation to uppercase "PIG"
This commit updates the titles across multiple integration documentation files to consistently use uppercase "PIG" instead of lowercase "pig." This change enhances uniformity and improves the overall presentation of the documentation.

--- a/docs/integration/sso-jeesite-pig.mdx
+++ b/docs/integration/sso-jeesite-pig.mdx
@@ -1,5 +1,5 @@
 ---
-title: "[单点案例] jeesite 前后端分离系统接入 pig"
+title: "PIG 整合 JeeSite 单点登录"
 ---
 
 ## jeesite 改造后源码
@@ -20,8 +20,8 @@ INSERT INTO `pig`.`sys_oauth_client_details`(`client_id`, `resource_ids`, `clien
 
 ## 后端配置
 
-> 配置  jeesite 前端地址 默认 3100 端口  
-配置  PIG 网关地址
+> 配置  jeesite 前端地址 默认 3100 端口  
+配置  PIG 网关地址
 >
 
 + 增加 sso 的配置  
