--- a/docs/backend/function-usage/pig-dynamic-datasource.mdx
+++ b/docs/backend/function-usage/pig-dynamic-datasource.mdx
@@ -1,14 +1,14 @@
 ---
-title: "pig 动态数据源使用"
+title: "Pig 动态数据源使用"
 ---
 
 ## 动态数据源
 
-pig 的多数据配置，是基于 [dynamic-datasource-spring-boot-starter](https://github.com/baomidou/dynamic-datasource-spring-boot-starter/wiki)实现，理论上支持此组件的全部功能。
+Pig 的多数据配置，是基于 [dynamic-datasource-spring-boot-starter](https://github.com/baomidou/dynamic-datasource-spring-boot-starter/wiki) 实现，理论上支持此组件的全部功能。
 
 ## 如何使用
 
-#### 1. 业务服务引入动态数据源服务
+### 1. 业务服务引入动态数据源服务
 
 ```xml
 <dependency>
@@ -17,7 +17,7 @@ pig 的多数据配置，是基于 [dynamic-datasource-spring-boot-starter](http
 </dependency>
 ```
 
-#### 2. 配置数据源信息来源（JDBC 配置）
+### 2. 配置数据源信息来源（JDBC 配置）
 
 ```yaml
 ## 默认查询本服务数据源 ` gen_datasource_conf`，可参考 `pig_codegen` 模块
@@ -27,9 +27,11 @@ spring:
       query-ds-sql: 'select * from gen_datasource_conf where del_flag = 0'
 ```
 
-![](/images/1599315066287-0a240b69-3494-476e-8892-0f4abba9ff2c.png)
+<Frame>
+  <img src="/images/1599315066287-0a240b69-3494-476e-8892-0f4abba9ff2c.png" alt="数据源配置示例" />
+</Frame>
 
-#### 3. 开启动态数据源
+### 3. 开启动态数据源
 
 ```java
 @EnableDynamicDataSource
@@ -40,11 +42,11 @@ public class App {
 }
 ```
 
-#### 4. 使用动态数据源查询
-:::color3
-**Mapper 层 **`**@Ds("#last")**`** 固定写法，最后一个参数为指定数据源 (必须有)**
+### 4. 使用动态数据源查询
 
-:::
+<Note>
+  Mapper 层 `@DS("#last")` 固定写法，最后一个参数为指定数据源（必须有）
+</Note>
 
 ```java
 @Mapper
@@ -54,7 +56,7 @@ public interface DemoMapper extends BaseMapper<Demo> {
 }
 ```
 
-+ Service 层调用
+**Service 层调用**
 
 ```java
 @Service
@@ -67,34 +69,43 @@ public class DemoServiceImpl extends ServiceImpl<DemoMapper, Demo> implements De
 }
 ```
 
-#### 扩展使用
+## 扩展使用
 
-+ [可以参考官方文档：动态参数解析数据源](https://github.com/baomidou/dynamic-datasource-spring-boot-starter/wiki/Dynamic-Analysis-DataSource)
+[可以参考官方文档：动态参数解析数据源](https://github.com/baomidou/dynamic-datasource-spring-boot-starter/wiki/Dynamic-Analysis-DataSource)
 
-```java
-@DS("#session.tenantName")//从 session 获取
+<CodeGroup>
+```java 从session获取
+@DS("#session.tenantName")
 public List selectSpelBySession() {
-   return userMapper.selectUsers();
-}
-
-@DS("#header.tenantName")//从 header 获取
-public List selectSpelByHeader() {
-   return userMapper.selectUsers();
-}
-
-@DS("#tenantName")//使用 spel 从参数获取
-public List selectSpelByKey(String tenantName) {
-   return userMapper.selectUsers();
-}
-
-@DS("#user.tenantName")//使用 spel 从复杂参数获取
-public List selecSpelByTenant(User user) {
    return userMapper.selectUsers();
 }
 ```
 
-## ♥️ 获取支持
-<Card title="遇到问题？" horizontal icon="link" href="https://gitee.com/log4j/pig/issues">
-  如果您在使用过程中遇到任何问题、有功能建议或需求，请点击此卡片前往 Gitee 仓库提交 Issue。
+```java 从header获取
+@DS("#header.tenantName")
+public List selectSpelByHeader() {
+   return userMapper.selectUsers();
+}
+```
+
+```java 从参数获取
+@DS("#tenantName")
+public List selectSpelByKey(String tenantName) {
+   return userMapper.selectUsers();
+}
+```
+
+```java 从复杂参数获取
+@DS("#user.tenantName")
+public List selecSpelByTenant(User user) {
+   return userMapper.selectUsers();
+}
+```
+</CodeGroup>
+
+## 获取支持
+
+<Card title="遇到问题？" icon="question-circle" href="https://gitee.com/log4j/pig/issues">
+  如果您在使用过程中遇到任何问题、有功能建议或需求，请点击此处前往 Gitee 仓库提交 Issue。
 </Card>
 
