feat(docs): update development participation documentation with new contributions section
This commit revises the development participation documentation to enhance clarity and engagement. It introduces a new section outlining the benefits of participating in the PIG ecosystem, including community growth, impact, and collaboration opportunities. Additionally, it details various forms of contributions, such as code, documentation, quality assurance, and community support, emphasizing the value of every contribution. The overall structure and messaging have been refined to better encourage user involvement.

--- a/info/development-participation.mdx
+++ b/info/development-participation.mdx
@@ -4,41 +4,23 @@ icon: "git"
 iconType: "solid"
 ---
 
-## 欢迎参与贡献
+我们热切期待您成为 PIG 开源生态的重要构建者！无论您是经验丰富的开发者还是刚入门的新手，这里都是您施展才华的舞台。加入我们，**携手打造行业领先的微服务解决方案**，让您的代码改变成千上万开发者的工作方式！
 
-我们非常欢迎您的贡献和加入，无论是微不足道的清理或大的新功能。我们希望通过每一位用户参与到 pig 的功能开发中，**「共同打造完美的微服务解决方案」**。  
+### 为什么选择参与 PIG 开发？
+- 🌱 **成长型社区**：在实战中掌握 Spring Cloud Alibaba 最新技术栈，获得架构设计最佳实践
+- 🏆 **影响力建设**：您的贡献将直接服务 10W+ 开发者，提升行业影响力
+- 💡 **创意实现**：提出并实现创新功能，定义微服务开发新标准
+- 🤝 **精英协作**：与 GVP 项目核心团队并肩作战，获得资深架构师代码评审
 
-当然代码不是唯一贡献方式。我们非常重视文档、与其他项目的集成，并欣然接受这些方面的改进。
+### 贡献形式多样任您选：
+- **代码贡献**：从 [Good First Issue](https://gitee.com/log4j/pig/issues) 开始，逐步深入核心模块开发
+- **文档优化**：完善使用手册、编写技术博客、录制教学视频
+- **质量护航**：参与代码审查、编写单元测试、进行漏洞排查  
+- **生态建设**：开发 IDE 插件、制作技术主题分享、撰写项目集成案例
+- **社区支持**：解答用户问题、完善 Issue 模板、维护知识库
 
-## 贡献者福利
+**每一行代码都值得被尊重**，我们为所有贡献者准备了阶梯式成长路径。从基础贡献者到核心 committer，您的成长将获得全程见证与支持！
 
-<CardGroup cols={2}>
-  <Card title="Gitee GVP 项目标识" icon="award">
-    成为贡献者后，您将在 Gitee 获取 GVP 项目标识。
-    
-    <img src="/images/1625898688116-a5fc16a7-7181-4234-8e61-40d9dcda9dc3.png" height="200" alt="Gitee GVP 项目标识" />
-  </Card>
-  
-  <Card title="贡献者名单" icon="users">
-    您的 ID 将出现在 pig 贡献者列表中。
-    
-    <img src="/images/1625898761016-c616723d-fdeb-4ef8-9854-83f8da19943b.png" height="200" alt="贡献者列表" />
-  </Card>
-  
-  <Card title="定制周边福利" icon="gift">
-    优秀贡献者将获得定制周边福利。
-    <img src="/images/1627972504246-8b82f0f4-43aa-42cd-9789-9db29acb8d8b.png" height="200" alt="定制水杯1" />
-  </Card>
-  
-  <Card title="线下交流活动" icon="handshake">
-    核心贡献者可参与定期线下面基福利，冷冷请客（北京）。
-    
-    <Note>
-    核心贡献者线下**约码**交流
-    </Note>
-    <img src="/images/1628040128164-36304817-95ed-4a06-8ebe-9be0f1413cb9.png" height="200" alt="线下约码" />
-  </Card>
-</CardGroup>
 
 ## 贡献指南
 
