--- a/dev/crud.mdx
+++ b/dev/crud.mdx
@@ -10,7 +10,7 @@ icon: "plane-departure"
   title="微服务增删改查教程"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
+  allowfullscreen="true"
 ></iframe>
 
 ## 1. 创建测试数据库及其表
