--- a/dev/function/knife4j-api-debugging.mdx
+++ b/dev/function/knife4j-api-debugging.mdx
@@ -9,7 +9,7 @@ title: "Knife4j API 接口调试指南"
   title="Knife4j API 调试视频教程"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
+  allowfullscreen="true"
 ></iframe>
 
 ## 立即使用
