--- a/dev/integration/pig-rocketmq-integration.mdx
+++ b/dev/integration/pig-rocketmq-integration.mdx
@@ -9,7 +9,7 @@ title: "PIG 整合 RocketMQ 集成指南"
   title="RocketMQ 集成视频教程"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
+  allowfullscreen="true"
 ></iframe>
 
 ## 安装 RocketMQ
