--- a/deployment/docker.mdx
+++ b/deployment/docker.mdx
@@ -10,7 +10,7 @@ icon: "docker"
   title="Docker 部署 PIG 应用教程"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
+  allowfullscreen="true"
 ></iframe>
 
 <Warning>
