--- a/dev/archetype.mdx
+++ b/dev/archetype.mdx
@@ -11,7 +11,7 @@ iconType: "solid"
   title="Bilibili video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
+  allowfullscreen="true"
 ></iframe>
 
 ## 1. 编译原有 pig 项目
