--- a/dev/boot.mdx
+++ b/dev/boot.mdx
@@ -10,7 +10,7 @@ icon: "rectangle-code"
   title="Bilibili video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
+  allowfullscreen="true"
 ></iframe>
   
 ## 1. 创建测试表
