--- a/dev/function/pig-xss-filter.mdx
+++ b/dev/function/pig-xss-filter.mdx
@@ -9,7 +9,7 @@ title: "XSS 攻击防护"
   title="XSS 攻击防护视频教程"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
+  allowfullscreen="true"
 ></iframe>
 
 # XSS 攻击概述
