--- a/dev/function/postman-api-usage.mdx
+++ b/dev/function/postman-api-usage.mdx
@@ -9,7 +9,7 @@ title: "Postman API 调用指南"
   title="Postman API 调用视频教程"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
+  allowfullscreen="true"
 ></iframe>
 
 ## 一、安装 Apifox
