--- a/dev/integration/pig-register-nacos-oracle.mdx
+++ b/dev/integration/pig-register-nacos-oracle.mdx
@@ -9,7 +9,7 @@ title: "PIG 整合 Oracle 数据库 Nacos 注册中心"
   title="Nacos Oracle 注册中心集成视频教程"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
+  allowfullscreen="true"
 ></iframe>
 
 Nacos 从 2.2.0 版本开始，可通过 SPI 机制注入多数据源实现插件，并在引入对应数据源实现后，便可在 Nacos 启动时通过读取 application.properties 配置文件中 spring.datasource.platform 配置项选择加载对应多数据源插件。
