--- a/dev/integration/pig-shardingsphere-integration.mdx
+++ b/dev/integration/pig-shardingsphere-integration.mdx
@@ -9,7 +9,7 @@ title: "PIG 整合 Sharding 分库分表"
   title="ShardingSphere 分表教程"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
+  allowfullscreen="true"
 ></iframe>
 
 <Warning>
